--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,22 @@
 buildscript {
+  ext.versions = [
+      'compileSdk'    : 27,
+      'minSdk'        : 16,
+
+      'kotlin'        : '1.2.30',
+      'rxjava'        : '2.1.10',
+      'rxrelay'       : '2.0.0',
+      'supportLibrary': '27.1.0'
+  ]
+
   repositories {
     google()
     jcenter()
   }
+
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.0-beta4'
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.30'
+    classpath "com.android.tools.build:gradle:3.1.0-rc01"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
   }
 }
 
