--- a/mrbutler/build.gradle
+++ b/mrbutler/build.gradle
@@ -10,8 +10,8 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.30'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
-    implementation 'com.android.support:support-fragment:27.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+    implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
+    implementation "com.jakewharton.rxrelay2:rxrelay:$versions.rxrelay"
+    implementation "com.android.support:support-fragment:$versions.supportLibrary"
 }
