--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
       'compileSdk'    : 27,
       'minSdk'        : 14,
 
-      'kotlin'        : '1.2.30',
-      'rxjava'        : '2.1.10',
+      'kotlin'        : '1.2.31',
+      'rxjava'        : '2.1.12',
       'rxrelay'       : '2.0.0',
-      'supportLibrary': '27.1.0'
+      'supportLibrary': '27.1.1'
   ]
 
   repositories {
@@ -15,7 +15,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:3.1.0-rc01"
+    classpath "com.android.tools.build:gradle:3.1.1"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
   }
 }
