--- a/mrbutler/build.gradle
+++ b/mrbutler/build.gradle
@@ -10,8 +10,8 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
     implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
     implementation "com.jakewharton.rxrelay2:rxrelay:$versions.rxrelay"
-    implementation "com.android.support:support-fragment:$versions.supportLibrary"
+    implementation "androidx.fragment:fragment:$versions.androidX"
 }
