--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
   ext.versions = [
-      'compileSdk'    : 27,
-      'minSdk'        : 14,
+      'compileSdk': 28,
+      'minSdk'    : 14,
 
-      'kotlin'        : '1.2.31',
-      'rxjava'        : '2.1.12',
-      'rxrelay'       : '2.0.0',
-      'supportLibrary': '27.1.1'
+      'kotlin'    : '1.2.71',
+      'appcompat' : '1.0.0',
+      'fragment'  : '1.0.0',
+      'rxjava'    : '2.2.3',
+      'rxrelay'   : '2.1.0',
   ]
 
   repositories {
@@ -15,7 +16,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:3.1.1"
+    classpath 'com.android.tools.build:gradle:3.2.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
   }
 }
