--- a/mrbutler/build.gradle
+++ b/mrbutler/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion versions.compileSdk
+  compileSdkVersion versions.compileSdk
 
-    defaultConfig {
-        minSdkVersion versions.minSdk
-    }
+  defaultConfig {
+    minSdkVersion versions.minSdk
+  }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
-    implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
-    implementation "com.jakewharton.rxrelay2:rxrelay:$versions.rxrelay"
-    implementation "com.android.support:support-fragment:$versions.supportLibrary"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+  implementation "androidx.fragment:fragment:$versions.fragment"
+  implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
+  implementation "com.jakewharton.rxrelay2:rxrelay:$versions.rxrelay"
 }
