--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,7 +16,7 @@ android {
 
 dependencies {
   implementation project(':mrbutler')
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+  implementation "androidx.appcompat:appcompat:$versions.appcompat"
   implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
-  implementation "com.android.support:appcompat-v7:$versions.supportLibrary"
 }
